# website

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.heroku  Makefile  README.md  _typos.toml  configurations_mypy_django_plugin.py  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  gunicorn_start  heroku.yml  justfile  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg
.ebextensions/: django.config
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: build_deploy.yaml  codeql-analysis-javascript.yml  codeql-analysis-py.yml  codeql-analysis.yml  django.yml  docker-publish.yml  pythonapp.yml
.github/workflows/codeql/: codeql-analysis-javascript.yml
api/: factories.py  serializers.py  tests.py  urls.py  views.py
api/tests_views/: test_views.py
blog/: admin.py  apps.py  conftest.py  context_processor.py  custom_storages.py  factories.py  filters.py  forms.py  models.py  serializers.py  sitemap.py  tasks.py  twitter_api.py  types.py  urls.py  views.py
blog/management/commands/: apply_styles.py  create_dummy_data.py  fill_db.py  get_daily_dolar.py  improve_posts.py
blog/migrations/: 0001_initial.py  0001_squashed_0012_auto_20200521_1246.py  0001_squashed_0013_auto_20200521_1124.py  0002_auto_20200523_1753.py  0002_dolarpeso.py  0003_auto_20170701_1458.py  0003_auto_20200526_1714.py  0004_alter_tag_options_alter_tag_slug_alter_tag_word.py  0004_auto_20170701_1945.py  0004_auto_20200606_0755.py  0005_auto_20170806_2313.py  0005_remove_post_pompadour_post_summary_alter_post_slug_and_more.py  0006_post_image.py  0006_remove_post_images_remove_post_snippets_and_more.py  0007_auto_20171210_1543.py  0007_post_suggestions.py  0008_auto_20191112_1022.py  0008_post_post_published_date_idx_and_more.py  0009_auto_20200216_1243.py  0009_post_search_vector.py  0010_auto_20200516_1231.py  0011_delete_custompage.py  0012_auto_20200517_2015.py  0012_auto_20200521_1246.py  0013_auto_20200521_1124.py
blog/services/: captcha.py  chatgpt.py  contact.py  parsers.py  prettifier.py  telegram.py
blog/templates/blog/: _about.html  _classes.html  _consultancy.html  _contact.html  _home.html  about.html  add_comment_to_post.html  advance_search.html  base.html  bio.html  bloglist.html  body.html  clases.html  classes.html  consultancy.html  contact.html  custom_page.html  error.html  footer.html  footer_disqus.html  head.html  home.html  mentoring.html  navbar.html  personal_links.html  post_archive_day.html  post_archive_month.html  post_archive_week.html  post_detail.html  post_list.html  python.html  search.html  stuff.html  success.html  work.html
blog/templates/registration/: login.html
blog/templatetags/: pagination_tags.py  tools.py  twitter_tags.py
blog/tests/: admin_test.py  conftest.py  context_processor_test.py  factories.py  forms_test.py  model_test.py  test_forms.py  test_models.py  views_test.py
blog/tests/admin/: admin_test.py  test_admin_post.py
config/: admin.py  models.py  urls.py  views.py
config/migrations/: 0001_initial.py  0002_siteconfiguration_tab_title.py  0003_twitterconfiguration.py  0004_bioconfiguration.py  0005_contactconfiguration.py  0006_auto_20170930_2353.py  0007_auto_20171210_1543.py  0008_auto_20180225_1923.py  0009_auto_20191112_1022.py  0010_auto_20200216_1243.py  0011_auto_20200216_1322.py  0012_auto_20200524_1009.py
core/: admin.py  context_processor.py  middleware.py  mixins.py  sitemap.py  types.py  urls.py  views.py
core/services/: pretty.py
core/tests/: context_processor_test.py
django_fast/: admin.py  apps.py  middleware.py  models.py  urls.py  views.py
django_fast/migrations/: 0001_initial.py  0002_requestprofile.py  0003_requestprofile_reqprofile_start_time_idx_and_more.py
django_fast/templatetags/: dict_filters.py
expenses/: admin.py  models.py  serializers.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_auto_20200216_1243.py  0003_alter_expense_amount_currency.py
files/: admin.py  models.py
files/migrations/: 0001_initial.py  0002_alter_publicimage_id.py
frontend/: urls.py  views.py
proposals/: proposal-a-philosopher-engineer.html  proposal-a1-warm-touch.html  proposal-b-modern-systems-portfolio.html  proposal-c-experimental-author.html  take_screenshots.py
scripts/: fabfile.py  fix_ufw_docker.sh  get_dump.sh  gunicorn_start.sh  load_dump.sh  runserver.sh  test.sh  uwsgi.ini  uwsgi_start.sh  wait_for_db.sh
scripts/db/: 01_create_db_users.sh
scripts/fail2ban/: jail.conf
scripts/providers/: Dockerfile.heroku
scripts/whitelist/: cloudflare.sh
snippets/: admin.py  models.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py  0002_auto_20200924_1043.py  0003_alter_snippet_language_alter_snippet_style.py  0004_alter_snippet_language_alter_snippet_style.py  0005_alter_snippet_id.py  0006_alter_snippet_language_alter_snippet_style.py  0007_alter_snippet_language.py  0008_alter_snippet_language.py
snippets/tests/: test_views.py
tests/e2e/: conftest.py  test_contact_form.py  test_homepage.py  test_language_switching.py
tests/views/: test_admin.py  test_middlewares.py  test_views.py
website/: asgi.py  blog.json  blog.xml  config.json  db.json  fabfile.py  middleware.py  pytest.ini  runner.py  settings.py  sitemap.py  storages.py  urls.py  views.py  wsgi.py
website/api/: serializers.py  tests.py  urls.py  views.py
website/blog/: admin.py  forms.py  models.py  sitemap.py  tests.py  twitter-api.py  twitter_api.py  urls.py  views.py
website/config/: admin.py  models.py  urls.py  views.py
website/expenses/: admin.py  models.py  serializers.py  urls.py  views.py
website/settings/: __init__.py  base.py  dev.py  docker.py  dokku.py  prod.py  production.py  settings_base.py  test.py
website/website/: settings.py  settings_docker.py  settings_testing.py  urls.py
(+147 files in other folders)
