[project]
name = "website"
description = 'My django blog Repo: http://eduzen.com.ar'
readme = "README.md"
requires-python = ">=3.13"
version = "2.1.1"
license = { text = "MIT" }
authors = [
  { name = "Eduardo Enriquez (eduzen)", email = "eduardo.a.enriquez@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "beautifulsoup4",
  "crispy-tailwind",
  "django",
  "django-ckeditor-5",
  "django-cors-headers",
  "django-crispy-forms",
  "django-extensions",
  "django-filter",
  "django-htmx",
  "django-image-cropping",
  "django-robots",
  "django-storages[google]",
  "django-debug-toolbar",
  "djangorestframework",
  "django-rosetta",
  "dj-database-url",
  "easy_thumbnails", # Needed for django-image-cropping
  "gunicorn",
  "gevent",
  "Markdown",
  "openai",
  "Pillow",
  "python-decouple",
  "psycopg2-binary",
  "pygments",
  "redis",
  "sentry-sdk[django]",
  "requests",
  "whitenoise[brotli]",
  "django-browser-reload>=1.17.0",
  "faker>=33.1.0",
  "django-cacheops>=7.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "factory-boy>=3.3.1",
    "ipdb>=0.13.13",
    "ipython>=8.29.0",
    "pgcli>=4.1.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "pytest-recording>=0.13.2",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
types = [
    "types-redis",
    "types-requests",
    "django-stubs[compatible-mypy]",
    "django-filter-stubs",
    "mypy>=1.13.0",
    "types-beautifulsoup4",
    "types-Pygments",
    "types-factory-boy",
]

[tool.pytest.ini_options]
addopts = "--ds=website.settings.test --pdbcls=IPython.terminal.debugger:Pdb"
filterwarnings = []

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
  "website/settings/base.py",
  "website/settings/test.py",
]

[tool.coverage.run]
branch = true
source = ["blog", "core", "snippets"]
omit = [
  "website/__init__.py",
  "website/settings/*",
  "website/wsgi.py",
  "website/asgi.py",
  "*/tests/*",
  "*/venv/*",
  "*/manage.py",
  "*/migrations/*",
  "*/factories.py",
]

[tool.coverage.report]
sort = "Cover"
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.json]
pretty_print=true

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
plugins = [
  "mypy_django_plugin.main",
]
exclude = [
  "^venv/",
  "^website/settings/",
  "^blog/tests/",
  "^blog/tests/factories.py",
  "migrations",
  "^factories\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.django-stubs]
django_settings_module = "website.settings.dev"
