[project]
name = "website"
description = 'My django blog Repo: http://eduzen.com.ar'
readme = "README.md"
requires-python = ">=3.13"
version = "2.1.1"
license = { text = "MIT" }
authors = [
  { name = "Eduardo Enriquez (eduzen)", email = "eduardo.a.enriquez@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "beautifulsoup4",
  "crispy-tailwind",
  "django",
  "django-ckeditor",
  "django-cors-headers",
  "django-crispy-forms",
  "django-extensions",
  "django-filter",
  "django-htmx",
  "django-image-cropping",
  "django-robots",
  "django-storages[google]",
  "django-debug-toolbar",
  "djangorestframework",
  "django-rosetta",
  "dj-database-url",
  "easy_thumbnails",  # Needed for django-image-cropping
  "gunicorn",
  "gevent",
  "Markdown",
  "openai",
  "Pillow",
  "python-decouple",
  "psycopg2-binary",
  "pygments",
  "redis",
  "sentry-sdk[django]",
  "requests",
  "whitenoise[brotli]",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "ipdb",
  "ipython",
  "mypy",
  "factory-boy",
  "pytest",
  "pytest-django",
  "pytest-mock",
  "pytest-sugar",
  "pytest-xdist",
  "pytest-recording",
  "types-redis",
  "types-requests",
  "django-browser-reload",
  "pre-commit",
]
types = [
  "types-redis",
  "types-requests",
  "django-stubs[compatible-mypy]",
  "django-filter-stubs",
  "types-beautifulsoup4",
  "types-Pygments",
  "types-factory-boy",
]

[tool.pytest.ini_options]
addopts = "--ds=website.settings.test --pdbcls=IPython.terminal.debugger:Pdb"
filterwarnings = []

[tool.isort]
profile = "black"
include_trailing_comma = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "website/settings/base.py",
  "website/settings/test.py",
]

[tool.coverage.run]
branch = true
source = ["blog", "core", "snippets"]
omit = [
  "website/__init__.py",
  "website/settings/*",
  "website/wsgi.py",
  "website/asgi.py",
  "*/tests/*",
  "*/venv/*",
  "*/manage.py",
  "*/migrations/*",
  "*/factories.py",
]

[tool.coverage.report]
sort = "Cover"
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.coverage.json]
pretty_print=true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
plugins = [
  "mypy_django_plugin.main",
]
exclude = [
  "migrations",
  "tests",
]

[tool.django-stubs]
django_settings_module = "website.settings.dev"


[[tool.mypy.overrides]]
module = [
    "decouple",
    "crispy_forms",
    "image_cropping",
]
ignore_missing_imports = true
